# CG-sketching

./: CMakeLists.txt  README.md
include/: conjugate_gradient.h  io.h  methods.h  mpi_setup.h  sketch.h  variables.h
src/: cg_draft  conjugate_gradient.cpp  dirac_operator.cpp  io.cpp  main.cpp  methods.cpp  sketch.cpp  utils.cpp  variables.cpp
